--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,7 +17,8 @@ spring:
       max-file-size: '10MB'
       max-request-size: '10MB'
 
-  datasource:
+  datasource:    
+    driver-class-name: org.postgresql.Driver
     username: ${DB_USER}
     password: ${DB_PASSWORD}
     url: jdbc:postgres://${DB_HOST}:${DB_PORT}/${DB_NAME}
